# VineTrimmeronColab2

./: How.to.use.txt  README.md  download.Amazon.bat  download.AppleTVPlus.bat  download.DisneyPlus.bat  download.GooglePlay.bat  download.Hulu.bat  download.HuluJP.bat  download.Netflix.bat  download.ParamountPlus.bat  download.Peacock.bat  install.poetry.bat  pyproject.toml  requirements.txt
binaries/: ccextractor  ffprobe  mediainfo  mp4dump
example_configs/: vinetrimmer.yml
example_configs/services/: amazon.yml  braviacore.yml  crave.yml  disneyplus.yml  netflix.yml
packaging/: make.ps1  pyinstaller.py
vinetrimmer/: constants.py  vinetrimmer.yml
vinetrimmer/commands/: dl.py
vinetrimmer/config/: vinetrimmer.yml
vinetrimmer/config/services/: all4.yml  amazon.yml  appletvplus.yml  axnplayer.yml  bbciplayer.yml  boomerang.yml  braviacore.yml  crave.yml  ctv.yml  discoveryplus.yml  disneynow.yml  disneyplus.yml  filmio.yml  flixole.yml  googleplay.yml  hbomax.yml  hotstar.yml  hulu.yml  hulujp.yml  (+9 more)
vinetrimmer/objects/: titles.py  tracks.py  vaults.py
vinetrimmer/parsers/: m3u8.py  mpd.py
vinetrimmer/services/: all4.py  amazon.py  appletvplus.py  axnplayer.py  bbciplayer.py  boomerang.py  braviacore.py  crave.py  ctv.py  discoveryplus.py  disneynow.py  disneyplus.py  filmio.py  flixole.py  googleplay.py  hbomax.py  hotstar.py  hulu.py  hulujp.py  itunes.py  netflix.py  paramountplus.py  peacock.py  rakutentv.py  rtlmost.py  showtime.py  sonyliv.py  spectrum.py  stan.py  tvnow.py  tvnz.py  videoland.py  vudu.py
vinetrimmer/utils/: __init__.py  io.py
(+9 files in other folders)
